update polardb-x setup note